# thunar-volman

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.pre-git  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml  thunar-volman-settings.desktop.in.in  thunar-volman-settings.in
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
icons/scalable/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  lv.po  (+31 more)
thunar-volman/: Makefile.am  main.c  meson.build  tvm-block-device.c  tvm-block-device.h  tvm-camera-device.c  tvm-camera-device.h  tvm-command-entry.c  tvm-command-entry.h  tvm-context.c  tvm-context.h  tvm-crypto-volume.c  tvm-crypto-volume.h  tvm-device.c  tvm-device.h  tvm-gio-extensions.c  tvm-gio-extensions.h  tvm-input-device.c  tvm-input-device.h  tvm-notify.c  tvm-notify.h  tvm-pango-extensions.c  tvm-pango-extensions.h  tvm-pda-device.c  tvm-pda-device.h  tvm-preferences-dialog.c  tvm-preferences-dialog.h  tvm-preferences.c  tvm-preferences.h  tvm-printer-device.c  tvm-printer-device.h  tvm-prompt.c  tvm-prompt.h  tvm-run.c  tvm-run.h  tvm-usb-device.c  tvm-usb-device.h
thunar-volman-settings/: Makefile.am  main.c  meson.build  thunar-volman-settings.desktop.in  thunar-volman-settings.desktop.in.in  tvm-command-entry.c  tvm-command-entry.h  tvm-preferences-dialog.c  tvm-preferences-dialog.h
