volman_sources = [
  'main.c',
  'tvm-block-device.c',
  'tvm-block-device.h',
  'tvm-context.c',
  'tvm-context.h',
  'tvm-device.c',
  'tvm-device.h',
  'tvm-gio-extensions.c',
  'tvm-gio-extensions.h',
  'tvm-input-device.c',
  'tvm-input-device.h',
  'tvm-notify.c',
  'tvm-notify.h',
  'tvm-pango-extensions.c',
  'tvm-pango-extensions.h',
  'tvm-prompt.c',
  'tvm-prompt.h',
  'tvm-run.c',
  'tvm-run.h',
  'tvm-usb-device.c',
  'tvm-usb-device.h',
]

volman = executable(
  'thunar-volman',
  volman_sources,
  sources: xfce_revision_h,
  include_directories: [
    include_directories('..'),
  ],
  dependencies: [
    glib,
    gthread,
    gio,
    gudev,
    gtk,
    exo,
    libxfce4util,
    libxfce4ui,
    xfconf,
    libnotify,
  ],
  install: true,
  install_dir: get_option('prefix') / get_option('bindir'),
)
